Перенес почти весь svg код в отдельный файл

--- a/src/partials/forwarding-services.html
+++ b/src/partials/forwarding-services.html
@@ -27,19 +27,8 @@
             data-graph-path="modal"
             data-graph-animation="fadeInUp"
           >
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
             <span>Оставить заявку</span>
           </button>
@@ -57,113 +46,8 @@
               />
             </picture>
 
-            <?xml version="1.0" standalone="no"?>
-            <svg
-              class="work-anim"
-              id="Frame1000001878-animate-svg"
-              viewBox="0 0 821 662"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M820.501 575.337H95.2949C90.5606 575.337 86.7227 571.499 86.7227 566.765V95.2948C86.7227 90.5605 90.5606 86.7227 95.2948 86.7227H811.5"
-                stroke="#DE1829"
-                stroke-width="1.71444"
-                stroke-dasharray="0,0,0,0,0,1939.8153076171875"
-              >
-                <animate
-                  attributeType="XML"
-                  attributeName="stroke-dasharray"
-                  repeatCount="indefinite"
-                  dur="6.0053238910178175s"
-                  values="0,0,0,0,0,1939.8153076171875; 0,0,0,969.9076538085938,969.9076538085938,0; 0,0,484.9538269042969,1454.8614807128906,0,0; 0,969.9076538085938,0,969.9076538085938,0,0"
-                  keyTimes="0; 0.5; 0.75; 1"
-                  begin="2.975748806678317s"
-                ></animate>
-              </path>
-              <path
-                d="M820.501 592.481H78.1504C73.4161 592.481 69.5781 588.643 69.5781 583.909V78.1503C69.5781 73.416 73.416 69.5781 78.1503 69.5781H811.5"
-                stroke="#2F2F2F"
-                stroke-width="1.71444"
-                stroke-dasharray="0,0,0,0,0,2008.39306640625"
-              >
-                <animate
-                  attributeType="XML"
-                  attributeName="stroke-dasharray"
-                  repeatCount="indefinite"
-                  dur="5.607140754618131s"
-                  values="0,0,0,0,0,2008.39306640625; 0,0,0,1004.196533203125,1004.196533203125,0; 0,0,502.0982666015625,1506.2947998046875,0,0; 0,1004.196533203125,0,1004.196533203125,0,0"
-                  keyTimes="0; 0.5; 0.75; 1"
-                  begin="2.3925986395798833s"
-                ></animate>
-              </path>
-              <path
-                d="M820.501 609.625H61.0058C56.2715 609.625 52.4336 605.787 52.4336 601.053V61.0058C52.4336 56.2715 56.2715 52.4336 61.0058 52.4336H811.5"
-                stroke="#DE1829"
-                stroke-width="1.71444"
-                stroke-dasharray="0,0,0,0,0,2076.970458984375"
-              >
-                <animate
-                  attributeType="XML"
-                  attributeName="stroke-dasharray"
-                  repeatCount="indefinite"
-                  dur="5.322548143874027s"
-                  values="0,0,0,0,0,2076.970458984375; 0,0,0,1038.4852294921875,1038.4852294921875,0; 0,0,519.2426147460938,1557.7278442382812,0,0; 0,1038.4852294921875,0,1038.4852294921875,0,0"
-                  keyTimes="0; 0.5; 0.75; 1"
-                  begin="2.4113176347087664s"
-                ></animate>
-              </path>
-              <path
-                d="M820.501 626.769H43.8613C39.127 626.769 35.2891 622.931 35.2891 618.197V43.8613C35.2891 39.127 39.127 35.2891 43.8612 35.2891H811.5"
-                stroke="#DE1829"
-                stroke-width="1.71444"
-                stroke-dasharray="0,0,0,0,0,2145.548095703125"
-              >
-                <animate
-                  attributeType="XML"
-                  attributeName="stroke-dasharray"
-                  repeatCount="indefinite"
-                  dur="5.05144465063573s"
-                  values="0,0,0,0,0,2145.548095703125; 0,0,0,1072.7740478515625,1072.7740478515625,0; 0,0,536.3870239257812,1609.1610717773438,0,0; 0,1072.7740478515625,0,1072.7740478515625,0,0"
-                  keyTimes="0; 0.5; 0.75; 1"
-                  begin="0.11104972398549373s"
-                ></animate>
-              </path>
-              <path
-                d="M820.5 643.914H26.7167C21.9824 643.914 18.1445 640.076 18.1445 635.341V26.7167C18.1445 21.9824 21.9824 18.1445 26.7167 18.1445H811.5"
-                stroke="#2F2F2F"
-                stroke-width="1.71444"
-                stroke-dasharray="0,0,0,0,0,2214.1259765625"
-              >
-                <animate
-                  attributeType="XML"
-                  attributeName="stroke-dasharray"
-                  repeatCount="indefinite"
-                  dur="5.149680873219781s"
-                  values="0,0,0,0,0,2214.1259765625; 0,0,0,1107.06298828125,1107.06298828125,0; 0,0,553.531494140625,1660.594482421875,0,0; 0,1107.06298828125,0,1107.06298828125,0,0"
-                  keyTimes="0; 0.5; 0.75; 1"
-                  begin="1.133436892539006s"
-                ></animate>
-              </path>
-              <path
-                d="M803.356 661.058H9.57219C4.83791 661.058 1 657.22 1 652.486V9.57218C1 4.8379 4.83789 1 9.57218 1H802.927"
-                stroke="#DE1829"
-                stroke-width="1.71444"
-                stroke-dasharray="0,0,0,0,0,2256.986328125"
-              >
-                <animate
-                  attributeType="XML"
-                  attributeName="stroke-dasharray"
-                  repeatCount="indefinite"
-                  dur="6.234783069695622s"
-                  values="0,0,0,0,0,2256.986328125; 0,0,0,1128.4931640625,1128.4931640625,0; 0,0,564.24658203125,1692.73974609375,0,0; 0,1128.4931640625,0,1128.4931640625,0,0"
-                  keyTimes="0; 0.5; 0.75; 1"
-                  begin="2.8854137625781067s"
-                ></animate>
-              </path>
-              <setting>
-                {"type":"shift","speed":8,"random":0.8,"shift":0.5,"size":1,"rupture":50}
-              </setting>
+            <svg class="work-anim">
+              <use xlink:href="#work-anim"></use>
             </svg>
           </div>
         </div>
@@ -348,19 +232,8 @@
             </p>
           </div>
           <a href="page-supply.html#0" class="btn btn-reset btn--primary">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
             <span>Подробнее</span>
           </a>
@@ -375,19 +248,8 @@
             </p>
           </div>
           <a href="page-export.html#1" class="btn btn-reset btn--primary">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
             <span>Подробнее</span>
           </a>
@@ -405,19 +267,8 @@
             href="page-transshipment-oils.html#2"
             class="btn btn-reset btn--primary"
           >
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
             <span>Подробнее</span>
           </a>
@@ -435,19 +286,8 @@
             href="page-transshipment-bitumen.html#3"
             class="btn btn-reset btn--primary"
           >
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
             <span>Подробнее</span>
           </a>
@@ -465,19 +305,8 @@
             href="page-forwarding-services.html#4"
             class="btn btn-reset btn--primary"
           >
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
             <span>Подробнее</span>
           </a>
@@ -492,19 +321,8 @@
             </p>
           </div>
           <a href="page-bunkering.html#5" class="btn btn-reset btn--primary">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
             <span>Подробнее</span>
           </a>
