--- a/src/scss/components/_btns.scss
+++ b/src/scss/components/_btns.scss
@@ -53,6 +53,8 @@
   border-radius: 5px;
   transition: all 0.3s ease-out;
   svg {
+    width: 0.625vw;
+    height: 0.625vw;
     transform: rotate(-90deg);
   }
 
