--- a/src/partials/business.html
+++ b/src/partials/business.html
@@ -34,72 +34,14 @@
           предоставление транспортно-экспедиторских услуг.
         </p>
         <button class="btn btn-reset btn--primary">
-          <svg
-            width="12"
-            height="13"
-            viewBox="0 0 12 13"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-              fill="#FF2D2D"
-            />
+          <svg>
+            <use xlink:href="#btn"></use>
           </svg>
           <span>Подробнее</span>
         </button>
 
-        <?xml version="1.0" standalone="no"?>
-        <svg
-          class="business-content__anim"
-          id="Property1=Default"
-          viewBox="0 0 260 284"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <g opacity="0.21">
-            <path
-              d="M150.918 4.20968C150.918 2.43702 152.355 1 154.128 1H255.789C257.562 1 258.999 2.43702 258.999 4.20967V140.559C258.999 141.271 258.762 141.963 258.326 142.526L156.664 273.665C154.79 276.083 150.918 274.757 150.918 271.699V4.20968Z"
-              stroke="#DE1829"
-              stroke-width="2"
-              stroke-dasharray="0,0,0,691.6160278320312"
-            >
-              <animate
-                attributeType="XML"
-                attributeName="stroke-dasharray"
-                repeatCount="indefinite"
-                dur="2.5s"
-                values="0,0,0,691.6160278320312;
-          0,345.8080139160156,345.8080139160156,0;
-          691.6160278320312,0,0,0"
-                keyTimes="0; 0.5; 1"
-                fill="freeze"
-              ></animate>
-            </path>
-            <path
-              d="M1 4.20968C1 2.43702 2.43703 1 4.20968 1H105.871C107.644 1 109.081 2.43702 109.081 4.20967V140.559C109.081 141.271 108.844 141.963 108.408 142.526L6.74639 273.665C4.8724 276.083 1 274.757 1 271.699V4.20968Z"
-              stroke="white"
-              stroke-width="2"
-              stroke-dasharray="0,0,0,691.6160888671875"
-            >
-              <animate
-                attributeType="XML"
-                attributeName="stroke-dasharray"
-                repeatCount="indefinite"
-                dur="2.5s"
-                values="0,0,0,691.6160888671875;
-          0,345.80804443359375,345.80804443359375,0;
-          691.6160888671875,0,0,0"
-                keyTimes="0; 0.5; 1"
-                fill="freeze"
-              ></animate>
-            </path>
-          </g>
-          <setting>
-            {"type":"direct","speed":20,"random":1,"shift":1,"size":1,"rupture":50}
-          </setting>
+        <svg class="business-content__anim">
+          <use xlink:href="#business-content-anim"></use>
         </svg>
       </div>
     </div>
@@ -199,36 +141,14 @@
 
       <div class="business-swiper__pagination">
         <button class="btn btn-reset btn--small business-swiper__prev">
-          <svg
-            width="12"
-            height="13"
-            viewBox="0 0 12 13"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-              fill="#FF2D2D"
-            />
+          <svg>
+            <use xlink:href="#btn"></use>
           </svg>
         </button>
 
         <button class="btn btn-reset btn--small business-swiper__next">
-          <svg
-            width="12"
-            height="13"
-            viewBox="0 0 12 13"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-              fill="#FF2D2D"
-            />
+          <svg>
+            <use xlink:href="#btn"></use>
           </svg>
         </button>
       </div>
