--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -53,129 +53,8 @@
     </div>
   </div>
 
-  <?xml version="1.0" standalone="no"?>
-  <svg
-    class="contacts-anim"
-    id="Frame1000001871-animate-svg"
-    viewBox="0 0 1920 100"
-    fill="none"
-    xmlns="http://www.w3.org/2000/svg"
-  >
-    <g clip-path="url(#clip0_742_5333)">
-      <line
-        y1="99"
-        x2="1920"
-        y2="99"
-        stroke="#DE1829"
-        stroke-width="2"
-        stroke-dasharray="0,0,0,0,0,1920"
-      >
-        <animate
-          attributeType="XML"
-          attributeName="stroke-dasharray"
-          repeatCount="indefinite"
-          dur="2.1575046264292923s"
-          values="0,0,0,0,0,1920; 0,0,0,960,960,0; 0,0,480,1440,0,0; 0,960,0,960,0,0"
-          keyTimes="0; 0.5; 0.75; 1"
-          begin="0.6902745632163076s"
-        ></animate>
-      </line>
-      <line
-        y1="79"
-        x2="1920"
-        y2="79"
-        stroke="#2F2F2F"
-        stroke-width="2"
-        stroke-dasharray="0,0,0,0,0,1920"
-      >
-        <animate
-          attributeType="XML"
-          attributeName="stroke-dasharray"
-          repeatCount="indefinite"
-          dur="2.0472878554092957s"
-          values="0,0,0,0,0,1920; 0,0,0,960,960,0; 0,0,480,1440,0,0; 0,960,0,960,0,0"
-          keyTimes="0; 0.5; 0.75; 1"
-          begin="0.35518051064454775s"
-        ></animate>
-      </line>
-      <line
-        y1="59"
-        x2="1920"
-        y2="59"
-        stroke="#2F2F2F"
-        stroke-width="2"
-        stroke-dasharray="0,0,0,0,0,1920"
-      >
-        <animate
-          attributeType="XML"
-          attributeName="stroke-dasharray"
-          repeatCount="indefinite"
-          dur="2.3071494031235313s"
-          values="0,0,0,0,0,1920; 0,0,0,960,960,0; 0,0,480,1440,0,0; 0,960,0,960,0,0"
-          keyTimes="0; 0.5; 0.75; 1"
-          begin="0.03750344298381029s"
-        ></animate>
-      </line>
-      <line
-        y1="39"
-        x2="1920"
-        y2="39"
-        stroke="#DE1829"
-        stroke-width="2"
-        stroke-dasharray="0,0,0,0,0,1920"
-      >
-        <animate
-          attributeType="XML"
-          attributeName="stroke-dasharray"
-          repeatCount="indefinite"
-          dur="2.3405387000991413s"
-          values="0,0,0,0,0,1920; 0,0,0,960,960,0; 0,0,480,1440,0,0; 0,960,0,960,0,0"
-          keyTimes="0; 0.5; 0.75; 1"
-          begin="0.5229242079240477s"
-        ></animate>
-      </line>
-      <line
-        y1="19"
-        x2="1920"
-        y2="19"
-        stroke="#2F2F2F"
-        stroke-width="2"
-        stroke-dasharray="0,0,0,0,0,1920"
-      >
-        <animate
-          attributeType="XML"
-          attributeName="stroke-dasharray"
-          repeatCount="indefinite"
-          dur="2.2267968667061493s"
-          values="0,0,0,0,0,1920; 0,0,0,960,960,0; 0,0,480,1440,0,0; 0,960,0,960,0,0"
-          keyTimes="0; 0.5; 0.75; 1"
-          begin="1.1037070118998362s"
-        ></animate>
-      </line>
-    </g>
-    <defs>
-      <clipPath id="clip0_742_5333">
-        <rect
-          width="1920"
-          height="100"
-          fill="white"
-          stroke-dasharray="0,0,0,0,0,4040"
-        >
-          <animate
-            attributeType="XML"
-            attributeName="stroke-dasharray"
-            repeatCount="indefinite"
-            dur="1.9677070436667152s"
-            values="0,0,0,0,0,4040; 0,0,0,2020,2020,0; 0,0,1010,3030,0,0; 0,2020,0,2020,0,0"
-            keyTimes="0; 0.5; 0.75; 1"
-            begin="0.27564793928806014s"
-          ></animate>
-        </rect>
-      </clipPath>
-    </defs>
-    <setting>
-      {"type":"shift","speed":21,"random":0.8,"shift":0.5,"size":1,"rupture":50}
-    </setting>
+  <svg class="contacts-anim">
+    <use xlink:href="#contacts-anim"></use>
   </svg>
 </section>
 
@@ -217,19 +96,8 @@
             />
           </label>
           <button class="form__btn btn btn-reset btn--primary">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
             <span>Отправить</span>
           </button>
