--- a/src/partials/press-center.html
+++ b/src/partials/press-center.html
@@ -29,20 +29,12 @@
             порта Санкт-Петербург» в Европу. Компания Trafigura планирует ....
           </p>
 
-          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+          <a
+            href="page-news-single.html"
+            class="news-card__btn btn-reset btn--small"
+          >
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
           </a>
         </div>
@@ -70,20 +62,12 @@
             автономный округ.
           </p>
 
-          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+          <a
+            href="page-news-single.html"
+            class="news-card__btn btn-reset btn--small"
+          >
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
           </a>
         </div>
@@ -112,20 +96,12 @@
             Республику Беларусь, а также ....
           </p>
 
-          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+          <a
+            href="page-news-single.html"
+            class="news-card__btn btn-reset btn--small"
+          >
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
           </a>
         </div>
@@ -154,20 +130,12 @@
             порта Санкт-Петербург» в Европу. Компания Trafigura планирует ....
           </p>
 
-          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+          <a
+            href="page-news-single.html"
+            class="news-card__btn btn-reset btn--small"
+          >
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
           </a>
         </div>
@@ -195,20 +163,12 @@
             автономный округ.
           </p>
 
-          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+          <a
+            href="page-news-single.html"
+            class="news-card__btn btn-reset btn--small"
+          >
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
           </a>
         </div>
@@ -237,20 +197,12 @@
             Республику Беларусь, а также ....
           </p>
 
-          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+          <a
+            href="page-news-single.html"
+            class="news-card__btn btn-reset btn--small"
+          >
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
           </a>
         </div>
@@ -279,20 +231,12 @@
             порта Санкт-Петербург» в Европу. Компания Trafigura планирует ....
           </p>
 
-          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+          <a
+            href="page-news-single.html"
+            class="news-card__btn btn-reset btn--small"
+          >
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
           </a>
         </div>
@@ -320,20 +264,12 @@
             автономный округ.
           </p>
 
-          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+          <a
+            href="page-news-single.html"
+            class="news-card__btn btn-reset btn--small"
+          >
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
           </a>
         </div>
@@ -362,20 +298,12 @@
             Республику Беларусь, а также ....
           </p>
 
-          <a href="page-news-single.html" class="news-card__btn btn-reset btn--small">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+          <a
+            href="page-news-single.html"
+            class="news-card__btn btn-reset btn--small"
+          >
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
           </a>
         </div>
@@ -384,19 +312,8 @@
       <div class="pagination">
         <ul class="pagination-list list-reset">
           <a href="#" class="pagination-btn btn-reset btn--small">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
           </a>
           <li class="pagination-item pagination-item--active">1</li>
@@ -405,19 +322,8 @@
           <li class="pagination-item">4</li>
           <li class="pagination-item">...</li>
           <a href="#" class="pagination-btn btn-reset btn--small">
-            <svg
-              width="12"
-              height="13"
-              viewBox="0 0 12 13"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.5005 6.20781L5.74171 10.2366L0.982924 6.20781L0.0146637 7.35152L5.25758 11.7902L5.74171 12.2L6.22584 11.7902L11.4688 7.35152L10.5005 6.20781ZM10.4829 0.800781L5.72412 4.82956L5.40973 4.56341L3.64221 3.0671C2.3507 1.97378 1.03995 0.864219 0.967493 0.803063L0.000926971 1.9482C0.072278 2.00843 1.38149 3.11668 2.67399 4.21084L4.44149 5.70713L5.02075 6.19752L5.18274 6.33465L5.22538 6.37075L5.23631 6.38L5.23908 6.38234L5.23977 6.38293L5.23995 6.38308L5.72413 5.81127L5.24001 6.38313L5.72413 6.79298L6.20826 6.38312L11.4512 1.94449L10.4829 0.800781Z"
-                fill="#FF2D2D"
-              />
+            <svg>
+              <use xlink:href="#btn"></use>
             </svg>
           </a>
         </ul>
