--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -94,7 +94,7 @@
   position: absolute;
   right: 50%;
   width: 100%;
-  height: auto;
+  height: 100%;
   transform: translateX(50%);
   bottom: 1vw;
 }
@@ -110,6 +110,7 @@
 .hero-load--2 {
   top: 18vw;
   right: -8vw;
+  right: -5vw;
   opacity: 0;
   transform: rotate(139deg);
   animation: load2 3s linear forwards;
@@ -132,7 +133,7 @@
 
 @keyframes load2 {
   100% {
-    top: -3vw;
+    top: -2vw;
     opacity: 1;
   }
 }
@@ -144,7 +145,7 @@
 
   100% {
     opacity: 1;
-    top: 1vw;
+    top: 4vw;
   }
 }
 
