Подвел страницы главная, о нас, наша миссия под pixel perfect

--- a/src/partials/business.html
+++ b/src/partials/business.html
@@ -1,5 +1,5 @@
 <section class="business main-shadow">
-  <div class="business-container container">
+  <div class="business-container">
     <div class="business-inner">
       <div class="business-images animation-images">
         <picture>
