--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,7 +4,7 @@
   </svg>
 
   <svg class="hero-vertical__anim">
-    <use xlink:href="img/sprite.svg#hero-vertical__anim"></use>
+    <use xlink:href="#hero-vertical-anim"></use>
   </svg>
 
   <div class="hero__container container">
