--- a/src/partials/leaders.html
+++ b/src/partials/leaders.html
@@ -45,7 +45,8 @@
             <div class="leader-card__content">
               <h3 class="leader-card__title leader-card__title--off">Рост</h3>
               <p class="leader-card__text">
-                Рост 2 раза рост поставок на внутренний рынок
+                Рост 2 раза рост поставок <br />
+                на внутренний рынок
               </p>
             </div>
             <span class="leader-card__num">03</span>
