--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,8 +1,8 @@
 .header {
   position: relative;
   padding: 1.146vw 0;
-  background-color: var(--bg-color);
-  z-index: 1;
+  //background-color: var(--bg-color);
+  z-index: 2;
   &__container {
     display: flex;
     align-items: center;
