--- a/src/scss/components/_about-grid.scss
+++ b/src/scss/components/_about-grid.scss
@@ -1,6 +1,6 @@
 .about-grid {
   position: relative;
-  margin-bottom: 20.146vw;
+  margin-bottom: 20vw;
   &__title {
     margin-bottom: 0;
     margin-bottom: 3vw;
@@ -35,7 +35,7 @@
 }
 
 .grid-images {
-  margin-bottom: 5.208vw;
+  margin-bottom: 4.8vw;
 }
 .grid-wrapper {
   display: grid;
@@ -105,7 +105,7 @@
     }
 
     &__title {
-      margin-bottom: 3vw;
+      margin-bottom: 5vw;
     }
 
     &__content {
@@ -114,7 +114,9 @@
 
     &__text {
       gap: 3.385vw;
+      line-height: 4.5vw;
       .text-page {
+        line-height: 4.5vw;
         max-width: 100%;
       }
     }
@@ -126,12 +128,14 @@
     .about-company__anim {
       position: static;
       display: block;
+      width: 207vw;
+      height: 47.5vw;
     }
   }
 
   .grid-images {
-    max-width: 92.7vw;
-    margin-bottom: 5.208vw;
+    max-width: 90vw;
+    margin-bottom: 6.208vw;
   }
   .grid-wrapper {
     grid-template-columns: repeat(2, 1fr);
@@ -143,38 +147,38 @@
     border-radius: 10px;
     &:nth-child(1) {
       grid-area: 1 / 1 / 4 / 2;
-      width: 52.734vw;
-      height: 55vw;
+      width: 50.734vw;
+      height: 51vw;
     }
 
     &:nth-child(2) {
       grid-area: 1 / 2 / 2 / 3;
       width: 38vw;
-      height: 23.1vw;
+      height: 20.5vw;
     }
 
     &:nth-child(3) {
       grid-area: 2 / 2 / 4 / 3;
       width: 38vw;
-      height: 30vw;
+      height: 28vw;
     }
 
     &:nth-child(4) {
-      width: 39vw;
-      height: 54vw;
+      width: 37vw;
+      height: 51vw;
       grid-area: 4 / 1 / 7 / 2;
     }
 
     &:nth-child(5) {
       width: 51.7vw;
-      height: 29.167vw;
+      height: 28.167vw;
       transform: translateX(-13.7vw);
       grid-area: 4 / 2 / 6 / 3;
     }
 
     &:nth-child(6) {
       width: 51.7vw;
-      height: 22.7vw;
+      height: 20.7vw;
       transform: translateX(-13.7vw);
       grid-area: 6 / 2 / 7 / 3;
     }
@@ -190,17 +194,19 @@
     }
 
     &__title {
-      margin-bottom: 3vw;
+      margin-bottom: 12vw;
     }
 
     &__content {
-      margin-bottom: 6.51vw;
+      margin-bottom: 10.51vw;
     }
 
     &__text {
-      gap: 3.385vw;
+      gap: 4.385vw;
+      line-height: 7vw;
       .text-page {
-        max-width: 100%;
+        min-width: 100%;
+        line-height: 7vw;
       }
     }
 
@@ -214,7 +220,6 @@
       left: -73vw;
       width: 586.667vw;
       height: 50vw;
-      margin-top: 10vw;
     }
   }
 
@@ -228,7 +233,7 @@
   .grid-wrapper {
     display: flex;
     gap: 0;
-    height: 160vw;
+    height: 131vw;
   }
   .grid-img {
     filter: none;
