--- a/src/scss/components/_business.scss
+++ b/src/scss/components/_business.scss
@@ -1,5 +1,5 @@
 .business {
-  margin-bottom: 10vw;
+  margin-bottom: 9.7vw;
   &::after {
     height: 50%;
   }
@@ -8,17 +8,25 @@
 .business-container {
   display: flex;
   flex-direction: column;
-  gap: 1vw;
+  gap: 0.2vw;
 }
 
 .business-inner {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  gap: 14.5vw;
 }
 .business-content {
   max-width: 38.594vw;
   flex-shrink: 0;
+}
+
+.business-images {
+  top: -3vw;
+}
+
+.business-title {
+  margin-bottom: 4vw;
 }
 
 .business-content--quote {
@@ -26,8 +34,8 @@
 }
 .business-content__anim {
   position: absolute;
-  right: 0;
-  bottom: 0;
+  right: -3.8vw;
+  bottom: 1.1vw;
   width: 13.542vw;
   height: 14.792vw;
 }
@@ -38,6 +46,7 @@
 }
 
 .business-swiper {
+  max-width: 86.458vw;
   width: 100%;
 }
 
@@ -53,7 +62,7 @@
 .business-card {
   position: relative;
   width: 100%;
-  height: 19vw;
+  height: 18vw;
   background-color: var(--black-color);
   border: 1px solid transparent;
   border-radius: 8px;
@@ -62,7 +71,7 @@
   cursor: pointer;
   &__img {
     width: 100%;
-    height: 11.302vw;
+    height: 11vw;
     margin-bottom: 1.667vw;
     margin-top: -6vw;
     transition: all 0.35s ease-out;
@@ -124,7 +133,8 @@
 
 @include tablet {
   .business {
-    margin-bottom: 10vw;
+    max-width: 90vw;
+    margin: 0 auto 9.1vw;
     &::after {
       height: 100%;
     }
@@ -136,11 +146,15 @@
 
   .business-inner {
     position: relative;
-    left: -19vw;
+    left: -35.5vw;
+  }
+
+  .business-title {
+    margin-bottom: 7vw;
   }
 
   .business-text {
-    margin-bottom: 6.51vw;
+    margin-bottom: 5vw;
   }
 
   .business-content {
@@ -155,24 +169,30 @@
     width: 24.219vw;
     height: 26.563vw;
     bottom: 20vw;
+    right: 2vw;
   }
 
   .business-images {
+    left: 15vw;
     width: 55.208vw;
     height: 52.995vw;
+  }
+
+  .business-swiper {
+    max-width: 100%;
   }
 
   .business-items {
     display: flex;
     flex-direction: column;
-    gap: 3.906vw;
+    gap: 3.7vw;
   }
   .business-card {
-    height: 49vw;
+    height: 45vw;
     border-radius: 1.042vw;
     cursor: pointer;
     &__img {
-      height: 60%;
+      height: 55%;
       margin-bottom: 0;
       margin-top: 0;
       img {
@@ -202,27 +222,31 @@
 
 @include mobile {
   .business {
-    margin-bottom: 26.667vw;
+    margin-bottom: 30vw;
     &::after {
       height: 100%;
     }
   }
 
   .business-container {
-    gap: 13.333vw;
+    gap: 12vw;
   }
 
   .business-inner {
     position: relative;
     left: 0;
     flex-direction: column-reverse;
-    gap: 5.333vw;
+    gap: 7vw;
+  }
+
+  .business-title {
+    margin-bottom: 9vw;
   }
 
   .business-swiper {
     display: flex;
     flex-direction: column;
-    gap: 8vw;
+    gap: 7vw;
   }
 
   .business-swiper__pagination {
@@ -241,7 +265,7 @@
   }
 
   .business-text {
-    margin-bottom: 6.51vw;
+    margin-bottom: 13vw;
   }
 
   .business-content {
@@ -260,6 +284,7 @@
   }
 
   .business-images {
+    left: 1vw;
     width: 89.067vw;
     height: 85.6vw;
   }
@@ -269,12 +294,13 @@
     gap: 0;
   }
   .business-card {
-    height: 138.667vw;
+    height: 132.6vw;
     border-radius: 2.133vw;
 
     &__img {
-      height: 60%;
-      margin-bottom: 13.333vw;
+      height: 62%;
+      margin-bottom: 13vw;
+
       img {
         display: block;
       }
