--- a/src/scss/components/_news.scss
+++ b/src/scss/components/_news.scss
@@ -41,15 +41,15 @@
 .news-cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1.042vw;
+  justify-content: space-between;
 }
 
 .news-column {
   position: relative;
   display: flex;
-  width: 100%;
+  width: 27.9vw;
   min-height: 29.844vw;
-  padding: 1.823vw 1.302vw;
+  padding: 1.823vw 1.3vw 1.5vw;
   background-color: var(--black-color);
   border: 1px solid #292929;
   border-radius: 8.006px;
@@ -109,6 +109,8 @@
   }
 
   &__btn {
+    width: 2.5vw;
+    height: 2.5vw;
     margin-left: auto;
     @include for-desktop {
       &:hover {
@@ -121,7 +123,7 @@
 @include tablet {
   .news-container {
     gap: 7.813vw;
-    padding: 12.24vw 0 10.677vw;
+    padding: 11vw 0 9vw;
   }
 
   .news-anim {
@@ -139,8 +141,9 @@
   }
 
   .news-column {
-    min-height: 74.609vw;
-    padding: 4.557vw 3.255vw;
+    width: 100%;
+    min-height: 73vw;
+    padding: 4vw 3vw 3vw;
     border: 3px solid #292929;
     border-radius: 1.042vw;
     &:nth-child(n + 2) {
@@ -156,9 +159,10 @@
     }
 
     &__title {
-      margin-bottom: 8.464vw;
+      margin-bottom: 10vw;
       font-size: 3.906vw;
       line-height: 4.557vw;
+      font-weight: 300;
     }
 
     &__text {
@@ -166,13 +170,18 @@
       font-size: 2.604vw;
       line-height: 3.906vw;
     }
+
+    &__btn {
+      width: 6vw;
+      height: 6vw;
+    }
   }
 }
 
 @include mobile {
   .news-container {
-    gap: 7.813vw;
-    padding: 13.333vw 0;
+    gap: 6.5vw;
+    padding: 12.333vw 0;
   }
 
   .news-top {
@@ -190,12 +199,12 @@
     line-height: 9.115vw;
   }
   .news-cards {
-    gap: 8vw;
+    gap: 6vw;
   }
 
   .news-column {
     min-height: auto;
-    padding: 6.667vw 4vw;
+    padding: 6.667vw 4vw 3vw;
     border: 1px solid #292929;
     border-radius: 2.133vw;
   }
@@ -203,20 +212,25 @@
   .news-card {
     &__date {
       font-size: 4.267vw;
-      line-height: 8vw;
+      line-height: 7vw;
       margin-bottom: 8vw;
     }
 
     &__title {
-      margin-bottom: 5.333vw;
-      font-size: 6.4vw;
-      line-height: 8vw;
+      margin-bottom: 4.333vw;
+      font-size: 6.1vw;
+      line-height: 7.7vw;
     }
 
     &__text {
-      margin-bottom: 7vw;
-      font-size: 4.267vw;
-      line-height: 6.933vw;
+      margin-bottom: 0;
+      font-size: 4.2vw;
+      line-height: 7.1vw;
+    }
+
+    &__btn {
+      width: 10vw;
+      height: 10vw;
     }
   }
 }
